--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,12 @@
 title: Insights Canada
-#include: ['_pages']
+include: ['_pages']
+permalink: /:title/
 relative_permalinks: false
+
+#gems: ['jekyll-less']
+
+assets:
+  sources:
+   - _assets/fonts
+   - _assets/js
+   - _assets/css
